feat: #56 Implemented automatic validation email sending after user registration with validation link (#82)
- feat: #56 Implemented automatic validation email sending after user registration with validation link
- fix: #56 Fixed Codacy Issues when resolving email_helper complexity
